--- a/app/app.css
+++ b/app/app.css
@@ -97,7 +97,7 @@ components that have the btn class name.
   border-color: black;
   border-width: 0.5;
   border-radius: 15px;
-  margin: 10px;
+  margin: 20px 20px 20px 20px;
 }
 
 .page-border {
@@ -106,18 +106,11 @@ components that have the btn class name.
 
 .border.gray {
   background-color: #e8e8e8;
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-.border.green {
-  background-color: #cbeddf;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 20px 20px 20px 20px;
 }
 
 .verticalLine {
-  width: 1px;
+  width: 5px;
   background-color: black;
   height: 100px;
   float: left;
