--- a/app/pages/home/home.component.html
+++ b/app/pages/home/home.component.html
@@ -12,7 +12,8 @@
     <StackLayout tkDrawerContent class="sidedrawer-left">
         <StackLayout>
             <Label text="Inbox" class="sideLabel sideLightGrayLabel"  (tap)="navigateToInbox()"></Label>
-            <Label text="Swap requests" class="sideLabel sideLightGrayLabel" (tap)="navigateToSwapRequests()"></Label>
+            <Label text="Open swap requests" class="sideLabel sideLightGrayLabel" (tap)="navigateToOpenSwapRequests()"></Label>
+            <Label text="Swap history" class="sideLabel sideLightGrayLabel" (tap)="navigateToSwapHistory()"></Label>
             <Label text="Settings" class="sideLabel sideLightGrayLabel"></Label>
         </StackLayout>
     </StackLayout>
@@ -26,9 +27,12 @@
               <StackLayout orientation="horizontal">
 
                 <Button class="btn btn-primary btn-lg btn-active" text="Start swapping" (tap)="navigateToAllGarments()"></Button>
-                <Button class="btn btn-primary btn-lg btn-active" text="Add garment" (tap)="navigateToAddGarment()"></Button>
+                <Button class="btn btn-primary btn-lg btn-active" text="Add Garment" (tap)="navigateToAllGarments()"></Button>
 
                </StackLayout>
+               <Button class="btn btn-primary btn-lg btn-active {{newRequests ? 'font-weight-bold' : 'font-weight-bold'}}" text="Open requests (3)" (tap)="navigateToAddGarment()"></Button>
+
+
 
             <Label text="&#xA;"></Label>
             <Label class="h3 text-center" text="My garments"></Label>
