--- a/app/pages/swap/open-requests/open-requests.component.html
+++ b/app/pages/swap/open-requests/open-requests.component.html
@@ -4,5 +4,5 @@
 </ActionBar>
 
 <StackLayout class="page">
-  <app-requests [(showHistory)]="showHistory"></app-requests>
+  <app-requests #appRequests [(showHistory)]="showHistory"></app-requests>
 </StackLayout>
