--- a/app/pages/garments/garment-overview/garment-overview.component.html
+++ b/app/pages/garments/garment-overview/garment-overview.component.html
@@ -12,7 +12,7 @@
              <Label class="gridItem boldText" text="{{ item.brand }}" textWrap="true" row="2" ></Label>
              <Label *ngIf="item.size" class="gridItem" text="{{ item.name }} ({{ item.size }})"
              textWrap="true" row="3"></Label>
-             <Label *ngIf="item.pantWaist" class="gridItem" text="{{ item.name }} ({{ item.pantWaist }})"
+             <Label *ngIf="item.length_size" class="gridItem" text="{{ item.name }} ({{ item.length_size }})"
              textWrap="true" row="3"></Label>
              <Label text="&#xA;" row="4"></Label>
          </GridLayout>
