--- a/app/pages/home/home.component.html
+++ b/app/pages/home/home.component.html
@@ -7,9 +7,9 @@
 
 <StackLayout orientation="vertical" class="page">
 
-  <RadSideDrawer tkExampleTitle tkToggleNavButton>
+  <RadSideDrawer tkExampleTitle tkToggleNavButton drawerLocation="Top">
 
-    <StackLayout tkDrawerContent class="sidedrawer-left">
+    <StackLayout tkDrawerContent class="sidedrawer-top">
         <StackLayout>
             <Label text="Open swap requests" class="sideLabel sideLightGrayLabel" (tap)="navigateToOpenSwapRequests()"></Label>
             <Label text="Swap history" class="sideLabel sideLightGrayLabel" (tap)="navigateToSwapHistory()"></Label>
