--- a/app/pages/garments/garment-overview/garment-overview.component.html
+++ b/app/pages/garments/garment-overview/garment-overview.component.html
@@ -15,8 +15,10 @@
       <CardView margin="2" elevation="10" radius="1">
          <GridLayout rows="*,*,*,*,*" columns="*">
             <ActivityIndicator row="0" [busy]="processing" width="100" height="100" class="activity-indicator"></ActivityIndicator>
-            <Image [src]="item.image" [width]="previewSize" [height]="previewSize" stretch="aspectFit" row="0"
+            <Image *ngIf="item.image == undefined" src="res://image_not_available" [width]="previewSize" [height]="previewSize" stretch="aspectFit" row="0"
               (tap)="toGarmentDetail(item.id)"></Image>
+              <Image *ngIf="item.image != undefined" [src]="item.image" [width]="previewSize" [height]="previewSize" stretch="aspectFit" row="0"
+                (tap)="toGarmentDetail(item.id)"></Image>
              <Label class="gridItem boldText" text="{{ item.brand }}" textWrap="true" row="2" ></Label>
              <Label *ngIf="item.size" class="gridItem" text="{{ item.name }} ({{ item.size }})"
              textWrap="true" row="3"></Label>
