--- a/app/pages/garments/garment-detail/garment-detail.component.html
+++ b/app/pages/garments/garment-detail/garment-detail.component.html
@@ -7,11 +7,12 @@
 
     <CardView class="body">
         <ActivityIndicator row="0" [busy]="processing" width="100" height="100" class="activity-indicator"></ActivityIndicator>
-        <Image [src]="garment.image" [width]="previewSize" [height]="previewSize" stretch="aspectFit" row="0"></Image>
-         <Label class="text-center font-weight-bold" text="{{ garment.brand }}" textWrap="true" row="1" ></Label>
-         <Label class="text-center" text="{{ garment.name }}" textWrap="true" row="2"></Label>
-         <Label class="text-center" text="{{ garment.size }}" textWrap="true" row="3"></Label>
-         <Label text="&#xA;" row="4"></Label>
+        <Image *ngIf="garment.image != undefined" [src]="garment.image" [width]="previewSize" [height]="previewSize" stretch="aspectFit" row="0"></Image>
+        <Image *ngIf="garment.image == undefined" src="res://image_not_available" [width]="previewSize" [height]="previewSize" stretch="aspectFit" row="0"></Image>
+        <Label class="text-center font-weight-bold" text="{{ garment.brand }}" textWrap="true" row="1" ></Label>
+        <Label class="text-center" text="{{ garment.name }}" textWrap="true" row="2"></Label>
+        <Label class="text-center" text="{{ garment.size }}" textWrap="true" row="3"></Label>
+        <Label text="&#xA;" row="4"></Label>
     </CardView>
 
     <Button *ngIf="!garmentSwapId && userId != garment.userId" class="btn btn-primary btn-rounded-lg btn-active" text="I want to swap!"
